--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 
   <div class="row">
     <div class="col-sm-4" *ngFor="let oferta of ofertas">
-      <div class="card">
+      <div class="card" style="margin-bottom: 50px;">
         <img class="card-img-top" [src]="oferta.imagens[2].url">
         <div class="card-block">
           <h4 class="card-title">{{oferta.titulo}}</h4>
