--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -12,10 +12,10 @@
     <div class="container">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Restaurantes</a>
+          <a routerLink="/restaurantes" class="nav-link active">Restaurantes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Diversão</a>
+          <a routerLink="/diversao" class="nav-link">Diversão</a>
         </li>
       </ul>
     </div>
