--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,7 +1,7 @@
 <div class="fixed-top">
   <nav class="navbar navbar-light bg-faded">
     <div class="container">
-      <a href="#" class="navbar-brand">
+      <a routerLink="/home" class="navbar-brand">
         <img src="/assets/logo.png" />
       </a>
       <a a href="#"><img src="/assets/carrinho.png" /></a>
@@ -12,10 +12,10 @@
     <div class="container">
       <ul class="nav">
         <li class="nav-item">
-          <a routerLink="/restaurantes" class="nav-link active">Restaurantes</a>
+          <a routerLink="/restaurantes" routerLinkActive="active" class="nav-link">Restaurantes</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/diversao" class="nav-link">Diversão</a>
+          <a routerLink="/diversao" routerLinkActive="active" class="nav-link">Diversão</a>
         </li>
       </ul>
     </div>
