--- a/src/app/diversao/diversao.component.html
+++ b/src/app/diversao/diversao.component.html
@@ -14,11 +14,11 @@
 
     <div class="col-md-8">
       <div class="row">
-        <h4>{{oferta.titulo}}</h4>
+        <h4>{{titulo}}</h4>
       </div>
 
       <div class="row">
-        <h5>{{oferta.descricaoOferta}}</h5>
+        <h5>{{oferta.titulo}}</h5>
       </div>
 
       <div class="row">
@@ -30,7 +30,7 @@
       </div>
 
       <div class="row">
-        <button routerLink="/ofertas" class="btn btn-outline-success">Ver oferta</button>
+        <button [routerLink]="['/ofertas',oferta.id]" class="btn btn-outline-success">Ver oferta</button>
       </div>
     </div>
   </div>
