--- a/src/app/oferta/oferta.component.html
+++ b/src/app/oferta/oferta.component.html
@@ -1,23 +1,21 @@
 <div class="container">
-  <div class="oferta">
+  <div class="oferta" *ngFor='let oferta of ofertas'>
 
     <div class="row">
       <div class="col">
-        <h4>Super Burger - Rodízio de Mini-hambúrger com opção de entrada.</h4>
+        <h4>{{oferta.titulo}}</h4>
       </div>
     </div>
 
-    <div class="row" (ofertaSelecEnviada)="testerino($event)">
+    <div class="row">
       <div class="col-md-6">
         <div class="img_capa">
-          <img src="/assets/ofertas/1/img1.jpg" />
+          <img [src]="oferta.imagens[0].url" />
         </div>
 
-        <div class="thumbnails">
-          <img src="/assets/ofertas/1/img2.jpg" />
-          <img src="/assets/ofertas/1/img3.jpg" />
-          <img src="/assets/ofertas/1/img4.jpg" />
-        </div>
+        <!-- <div class="thumbnails" *ngFor="let imagem of ofertaSelecionada.imagens">
+          <img [src]="imagem.url" />
+        </div> -->
       </div>
 
       <div class="col-md-6">
@@ -25,12 +23,12 @@
           <div class="col text-center">
             <p>Por apenas</p>
           </div>
-          
+
         </div>
 
         <div class="row">
           <div class="col text-center">
-            <h1>R$ 29,90</h1>
+            <h1>R$ {{oferta.valor}}</h1>
           </div>
         </div>
 
@@ -39,7 +37,7 @@
             <button type="button" class="btn btn-warning btn-lg">Adicionar ao carrinho</button>
           </div>
         </div>
-          
+
       </div>
 
     </div>
