Ajuste do retorno do service para um unico registro, pegando unico item do array JSON

--- a/src/app/oferta/oferta.component.html
+++ b/src/app/oferta/oferta.component.html
@@ -1,21 +1,21 @@
 <div class="container">
-  <div class="oferta" *ngFor='let oferta of ofertas'>
+  <div class="oferta">
 
     <div class="row">
       <div class="col">
-        <h4>{{oferta.titulo}}</h4>
+        <h4>{{ofertaSelecionada.descricao_oferta}}</h4>
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-6">
         <div class="img_capa">
-          <img [src]="oferta.imagens[0].url" />
+          <img [src]="ofertaSelecionada.imagens[0].url" />
         </div>
 
-        <!-- <div class="thumbnails" *ngFor="let imagem of ofertaSelecionada.imagens">
-          <img [src]="imagem.url" />
-        </div> -->
+        <div class="thumbnails">
+          <img *ngFor="let imagem of ofertaSelecionada.imagens" [src]="imagem.url" />
+        </div>
       </div>
 
       <div class="col-md-6">
@@ -28,7 +28,7 @@
 
         <div class="row">
           <div class="col text-center">
-            <h1>R$ {{oferta.valor}}</h1>
+            <h1>R$ {{ofertaSelecionada.valor}}</h1>
           </div>
         </div>
 
