--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -7,7 +7,7 @@
 
       <div class="row">
         <div class="col-sm-10">
-          <input type="text" class="form-control" placeholder="Pesquise por ofertas ..." (keyup)="pesquisar($event)">
+          <input type="text" class="form-control" placeholder="Pesquise por ofertas ..." #pesquisaUsuario (keyup)="pesquisar(pesquisaUsuario.value)">
         </div>
         <div class="col-sm-2">
           <a a href="#"><img src="/assets/carrinho.png" /></a>
