--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -11,7 +11,7 @@
             (keyup)="pesquisar(pesquisaUsuario.value)">
           <ul class="list-group" style="position: absolute;">
             <li class="list-group-item" style="width: 262px;" *ngFor='let oferta of ofertas'
-              [routerLink]="['/ofertas',oferta.id]">{{oferta.titulo | uppercase}}</li>
+              [routerLink]="['/ofertas',oferta.id]">{{oferta.titulo | descricaoReduzida}}</li>
           </ul>
         </div>
         <div class="col-sm-2">
