--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -10,8 +10,8 @@
           <input type="text" class="form-control" placeholder="Pesquise por ofertas ..." #pesquisaUsuario
             (keyup)="pesquisar(pesquisaUsuario.value)">
           <ul class="list-group" style="position: absolute;">
-            <li class="list-group-item" style="width: 262px;" *ngFor='let oferta of ofertas'
-              [routerLink]="['/ofertas',oferta.id]">{{oferta.titulo | descricaoReduzida :0 :13}}</li>
+            <li class="list-group-item" style="width: 262px;" *ngFor='let oferta of observableOfertas | async'
+              [routerLink]="['/ofertas',oferta.id]">{{oferta.titulo | descricaoReduzida :0 :13 | uppercase}}</li>
           </ul>
         </div>
         <div class="col-sm-2">
