--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="fixed-top">
   <nav class="navbar navbar-light bg-faded">
     <div class="container">
       <a routerLink="/home" class="navbar-brand">
