--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="ordem-compra">
+  <div class="ordem-compra" *ngIf='idPedido === undefined'>
     <form novalidate>
 
       <h5>Sua Compra</h5>
@@ -121,7 +121,13 @@
       </div>
 
       <hr />
-      <button type="submit" class="btn btn-primary btn-lg" [disabled]="estadoBotao">Cofirmar compra</button>
+      <button type="button" 
+      class="btn btn-primary btn-lg" 
+      [disabled]="estadoBotao"
+      (click)="confirmarCompra()">Cofirmar compra</button>
     </form>
+  </div>
+  <div class="ordem-compra" *ngIf='idPedido !== undefined'>
+    <vnd-ordem-compra-sucesso [idCompra]="idPedido"></vnd-ordem-compra-sucesso>
   </div>
 </div>
