--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="ordem-compra">
-    <form #formulario="ngForm" novalidate>
     
+    <form #formulario="ngForm" (ngSubmit)="confirmarCompra(formulario)" novalidate>
+
       <h5>Sua Compra</h5>
       <hr />
 
@@ -29,7 +30,7 @@
           29.90
         </div>
       </div>
-      
+
       <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
         <div class="form-group col-sm-1">
           <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
@@ -54,7 +55,7 @@
           31.90
         </div>
       </div>
-      
+
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
           <h4>Total do pedido: 61.80</h4>
@@ -69,42 +70,20 @@
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input 
-            type="text" 
-            class="form-control is-invalid" 
-            placeholder="Endereço" 
-            autocomplete="off" 
-            minlength="5" 
-            ngModel
-            name="endereco"
-            required
-          >
+          <input type="text" class="form-control is-invalid" placeholder="Endereço" autocomplete="off" minlength="5"
+            ngModel name="endereco" required>
           <small class="form-text text-danger">Endereço inválido</small>
         </div>
 
         <div class="form-group col-md-2">
-          <input 
-            ngModel
-            name="numero"
-            type="text" 
-            class="form-control is-valid" 
-            placeholder="Número" 
-            autocomplete="off" 
-            minlength="1"
-            required
-          >
+          <input ngModel name="numero" type="text" class="form-control is-valid" placeholder="Número" autocomplete="off"
+            minlength="1" required>
           <small class="form-text text-success">Ok</small>
         </div>
 
         <div class="form-group col-md-4">
-          <input 
-            type="text" 
-            class="form-control" 
-            placeholder="Complemento" 
-            autocomplete="off"
-            ngModel
-            name="complemento"
-          >
+          <input type="text" class="form-control" placeholder="Complemento" autocomplete="off" ngModel
+            name="complemento">
         </div>
 
       </div>
@@ -114,11 +93,9 @@
       <hr />
 
       <div class="form-row">
-          
+
         <div class="form-group col-md-3">
-          <select name="pagamento" ngModel
-            class="form-control is-invalid"
-          >
+          <select name="pagamento" ngModel class="form-control is-invalid">
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
@@ -128,15 +105,12 @@
       </div>
 
       <hr />
-      <button 
-        type="button" 
-        class="btn btn-primary btn-lg"
-      >Cofirmar compra</button>
+      <button type="submit" class="btn btn-primary btn-lg">Cofirmar compra</button>
 
       <pre>
         {{ formulario.value | json }}
       </pre>
-      
+
     </form>
   </div>
 </div>
