--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -70,20 +70,42 @@
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input type="text" class="form-control is-invalid" placeholder="Endereço" autocomplete="off" minlength="5"
-            ngModel name="endereco" required>
-          <small class="form-text text-danger">Endereço inválido</small>
+          <input type="text" 
+          class="form-control"
+          placeholder="Endereço" 
+          autocomplete="off" 
+          minlength="5"
+          ngModel 
+          #enderecoInput="ngModel"
+          name="endereco" 
+          required>
+          <small *ngIf="enderecoInput.valid && enderecoInput.touched" class="form-text text-success">Ok.</small>
+          <small *ngIf="!enderecoInput.valid && enderecoInput.touched" class="form-text text-danger">Endereço inválido!</small>
         </div>
 
         <div class="form-group col-md-2">
-          <input ngModel name="numero" type="text" class="form-control is-valid" placeholder="Número" autocomplete="off"
-            minlength="1" required>
-          <small class="form-text text-success">Ok</small>
+          <input 
+          ngModel 
+          #numeroInput="ngModel"
+          name="numero" 
+          type="text" 
+          class="form-control" 
+          placeholder="Número" 
+          autocomplete="off"
+          minlength="1" 
+          required>
+          <small *ngIf="numeroInput.valid && numeroInput.touched" class="form-text text-success">Ok.</small>
+          <small *ngIf="!numeroInput.valid && numeroInput.touched" class="form-text text-danger">Número inválido!</small>
         </div>
 
         <div class="form-group col-md-4">
-          <input type="text" class="form-control" placeholder="Complemento" autocomplete="off" ngModel
-            name="complemento">
+          <input type="text" 
+          class="form-control" 
+          placeholder="Complemento" 
+          autocomplete="off" 
+          ngModel
+          #complementoInput="ngModel"
+          name="complemento">
         </div>
 
       </div>
@@ -95,21 +117,21 @@
       <div class="form-row">
 
         <div class="form-group col-md-3">
-          <select name="pagamento" ngModel class="form-control is-invalid">
+          <select name="pagamento" 
+          ngModel
+          #pagamentoSelect="ngModel" 
+          class="form-control">
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small class="form-text text-danger">Forma de pagamento inválida</small>
+          <small *ngIf="!pagamentoSelect.valid && pagamentoSelect.touched" class="form-text text-danger">Forma de pagamento inválida!</small>
+          <small *ngIf="pagamentoSelect.valid && pagamentoSelect.touched" class="form-text text-success">Ok.</small>
         </div>
       </div>
 
       <hr />
       <button type="submit" class="btn btn-primary btn-lg">Cofirmar compra</button>
-
-      <pre>
-        {{ formulario.value | json }}
-      </pre>
 
     </form>
   </div>
