--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-  <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
+  <div class="ordem-compra">
+    <form novalidate [formGroup]="formulario"  (ngSubmit)="confirmarCompra()">
     
-    <form #formulario="ngForm" (ngSubmit)="confirmarCompra()" novalidate>
-
       <h5>Sua Compra</h5>
       <hr />
 
@@ -30,7 +29,7 @@
           29.90
         </div>
       </div>
-
+      
       <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
         <div class="form-group col-sm-1">
           <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
@@ -55,7 +54,7 @@
           31.90
         </div>
       </div>
-
+      
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
           <h4>Total do pedido: 61.80</h4>
@@ -63,49 +62,41 @@
       </div>
       <br />
 
-
       <h5>Dados de entrega</h5>
       <hr />
 
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input type="text" 
-          class="form-control"
-          placeholder="Endereço" 
-          autocomplete="off" 
-          minlength="5"
-          ngModel 
-          #enderecoInput="ngModel"
-          name="endereco" 
-          required>
-          <small *ngIf="enderecoInput.valid && enderecoInput.touched" class="form-text text-success">Ok.</small>
-          <small *ngIf="!enderecoInput.valid && enderecoInput.touched" class="form-text text-danger">Endereço inválido!</small>
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Endereço" 
+            formControlName="endereco"
+            autocomplete="off" 
+          >
+          <small class="form-text text-success">Ok</small>
         </div>
 
         <div class="form-group col-md-2">
           <input 
-          ngModel 
-          #numeroInput="ngModel"
-          name="numero" 
-          type="text" 
-          class="form-control" 
-          placeholder="Número" 
-          autocomplete="off"
-          minlength="1" 
-          required>
-          <small *ngIf="numeroInput.valid && numeroInput.touched" class="form-text text-success">Ok.</small>
-          <small *ngIf="!numeroInput.valid && numeroInput.touched" class="form-text text-danger">Número inválido!</small>
+            type="number" 
+            class="form-control" 
+            formControlName="numero"
+            placeholder="Número" 
+            autocomplete="off"
+          >
+          <small class="form-text text-success">Ok</small>
         </div>
 
         <div class="form-group col-md-4">
-          <input type="text" 
-          class="form-control" 
-          placeholder="Complemento" 
-          autocomplete="off" 
-          ngModel
-          #complementoInput="ngModel"
-          name="complemento">
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Complemento" 
+            formControlName="complemento"
+            autocomplete="off"
+          >
         </div>
 
       </div>
@@ -115,28 +106,25 @@
       <hr />
 
       <div class="form-row">
-
+          
         <div class="form-group col-md-3">
-          <select name="pagamento" 
-          ngModel
-          #pagamentoSelect="ngModel" 
-          class="form-control">
+          <select 
+            class="form-control"
+            formControlName="formaPagamento"
+          >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small *ngIf="!pagamentoSelect.valid && pagamentoSelect.touched" class="form-text text-danger">Forma de pagamento inválida!</small>
-          <small *ngIf="pagamentoSelect.valid && pagamentoSelect.touched" class="form-text text-success">Ok.</small>
+          <small class="form-text text-success">Ok</small>
         </div>
       </div>
 
       <hr />
-      <button type="submit" class="btn btn-primary btn-lg">Cofirmar compra</button>
-
+      <button 
+        type="submit" 
+        class="btn btn-primary btn-lg"
+      >Cofirmar compra</button>
     </form>
-  </div>
-  <!-- Renderizado quando realizado pedido -->
-  <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
-    <vnd-ordem-compra-sucesso [idDoPedido]="idPedidoCompra"></vnd-ordem-compra-sucesso>
   </div>
 </div>
