Implementaçao da validaçao do botao e envio para service

--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -125,6 +125,7 @@
 
       <hr />
       <button 
+        [disabled]="!formulario.valid"
         type="submit" 
         class="btn btn-primary btn-lg"
       >Cofirmar compra</button>
