--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="ordem-compra">
+  <div class="ordem-compra" *ngIf="idOrdemCompraSucesso === undefined">
     <form novalidate [formGroup]="formulario"  (ngSubmit)="confirmarCompra()">
     
       <h5>Sua Compra</h5>
@@ -130,5 +130,8 @@
         class="btn btn-primary btn-lg"
       >Cofirmar compra</button>
     </form>
+  </div>
+  <div class="ordem-compra" *ngIf="idOrdemCompraSucesso !== undefined">
+    <vnd-ordem-compra-sucesso [idDoPedido]="idOrdemCompraSucesso"></vnd-ordem-compra-sucesso>
   </div>
 </div>
