--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -15,7 +15,7 @@
           </ul>
         </div>
         <div class="col-sm-2">
-          <a a href="#"><img src="/assets/carrinho.png" /></a>
+          <a routerLink="/ordem-compra"><img src="/assets/carrinho.png" /></a>
         </div>
       </div>
 
