--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,16 +1,17 @@
 <div class="container">
   <div class="ordem-compra" *ngIf="idOrdemCompraSucesso === undefined">
-    <form novalidate [formGroup]="formulario"  (ngSubmit)="confirmarCompra()">
-    
+    <form novalidate [formGroup]="formulario" (ngSubmit)="confirmarCompra()">
+
       <h5>Sua Compra</h5>
       <hr />
 
-      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+      <div *ngFor="let item of itens" class="form-row"
+        style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
         <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid">
+          <img [src]="item.img.url" class="img-fluid">
         </div>
         <div class="form-group col-sm-6">
-          Super Burger
+          {{item.titulo}}
           <br />
           Rodízio de Mini-hambúrger com opção de entrada.
         </div>
@@ -19,45 +20,20 @@
           <div class="row">
             <div class="col">
               <button type="button" class="btn btn-link">-</button>
-              1
+              {{ item.quantidade }}
               <button type="button" class="btn btn-link">+</button>
             </div>
           </div>
         </div>
 
         <div class="form-group col-sm-3 d-flex justify-content-end">
-          29.90
+          {{item.valor * item.quantidade | currency: 'BRL' : true}}
         </div>
       </div>
-      
-      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
-        <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
-        </div>
-        <div class="form-group col-sm-6">
-          Estância das águas
-          <br />
-          Diversão garantida com piscinas, trilhas e muito mais.
-        </div>
 
-        <div>
-          <div class="row">
-            <div class="col">
-              <button type="button" class="btn btn-link">-</button>
-              1
-              <button type="button" class="btn btn-link">+</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group col-sm-3 d-flex justify-content-end">
-          31.90
-        </div>
-      </div>
-      
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
-          <h4>Total do pedido: 61.80</h4>
+          <h4>Total do pedido:  {{item.valor | currency: 'BRL' : true}}</h4>
         </div>
       </div>
       <br />
@@ -68,37 +44,24 @@
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input 
-            type="text" 
-            class="form-control" 
-            placeholder="Endereço" 
-            formControlName="endereco"
-            autocomplete="off" 
-          >
-          <small *ngIf="formulario.get('endereco').valid && formulario.get('endereco').touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!formulario.get('endereco').valid && formulario.get('endereco').touched" class="form-text text-danger">Endereço Inválido</small>
+          <input type="text" class="form-control" placeholder="Endereço" formControlName="endereco" autocomplete="off">
+          <small *ngIf="formulario.get('endereco').valid && formulario.get('endereco').touched"
+            class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('endereco').valid && formulario.get('endereco').touched"
+            class="form-text text-danger">Endereço Inválido</small>
         </div>
 
         <div class="form-group col-md-2">
-          <input 
-            type="text" 
-            class="form-control" 
-            formControlName="numero"
-            placeholder="Número" 
-            autocomplete="off"
-          >
-          <small *ngIf="formulario.get('numero').valid && formulario.get('numero').touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!formulario.get('numero').valid && formulario.get('numero').touched" class="form-text text-danger">Número inválido</small>
+          <input type="text" class="form-control" formControlName="numero" placeholder="Número" autocomplete="off">
+          <small *ngIf="formulario.get('numero').valid && formulario.get('numero').touched"
+            class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('numero').valid && formulario.get('numero').touched"
+            class="form-text text-danger">Número inválido</small>
         </div>
 
         <div class="form-group col-md-4">
-          <input 
-            type="text" 
-            class="form-control" 
-            placeholder="Complemento" 
-            formControlName="complemento"
-            autocomplete="off"
-          >
+          <input type="text" class="form-control" placeholder="Complemento" formControlName="complemento"
+            autocomplete="off">
         </div>
 
       </div>
@@ -108,27 +71,22 @@
       <hr />
 
       <div class="form-row">
-          
+
         <div class="form-group col-md-3">
-          <select 
-            class="form-control"
-            formControlName="formaPagamento"
-          >
+          <select class="form-control" formControlName="formaPagamento">
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small *ngIf="formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched"  class="form-text text-danger">Forma pagamento inválida.</small>
+          <small *ngIf="formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched"
+            class="form-text text-success">Ok</small>
+          <small *ngIf="!formulario.get('formaPagamento').valid && formulario.get('formaPagamento').touched"
+            class="form-text text-danger">Forma pagamento inválida.</small>
         </div>
       </div>
 
       <hr />
-      <button 
-        [disabled]="!formulario.valid"
-        type="submit" 
-        class="btn btn-primary btn-lg"
-      >Cofirmar compra</button>
+      <button [disabled]="!formulario.valid" type="submit" class="btn btn-primary btn-lg">Cofirmar compra</button>
     </form>
   </div>
   <div class="ordem-compra" *ngIf="idOrdemCompraSucesso !== undefined">
