--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -27,13 +27,13 @@
         </div>
 
         <div class="form-group col-sm-3 d-flex justify-content-end">
-          {{item.valor * item.quantidade | currency: 'BRL' : true}}
+          {{item.valor  | currency: 'BRL' : true}}
         </div>
       </div>
 
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
-          <h4>Total do pedido:  {{item.valor | currency: 'BRL' : true}}</h4>
+          <h4>Total do pedido: {{carrinhoService.retornaValorTotal() | currency: 'BRL' : true}}</h4>
         </div>
       </div>
       <br />
